--- a/src/pages/VideoDetails/videodetails.css
+++ b/src/pages/VideoDetails/videodetails.css
@@ -231,3 +231,11 @@ button:disabled {
         margin: unset;
     }
 }
+
+@media only screen and (max-width: 640px) {
+
+    .flex-column-start,
+    .margin-container {
+        margin-left: 1rem;
+    }
+}
