--- a/src/pages/VideoDetails/videodetails.css
+++ b/src/pages/VideoDetails/videodetails.css
@@ -13,6 +13,10 @@
     margin: 0.5rem 1rem 0.5rem 17rem;
 }
 
+.no-playlist-container1 {
+    margin-top: 6%;
+}
+
 .views {
     display: flex;
     align-items: center;
